--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -202,6 +202,8 @@ dependencies {
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.flipper'
     }
+    implementation 'androidx.media:media:1.1.0'
+    api 'com.google.android.gms:play-services-base:+'
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
