--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -204,6 +204,7 @@ dependencies {
     }
     implementation 'androidx.media:media:1.1.0'
     api 'com.google.android.gms:play-services-base:+'
+    implementation "com.google.android.gms:play-services-cast-framework:${safeExtGet('castFrameworkVersion', '+')}"
 
     if (enableHermes) {
         def hermesPath = "../../node_modules/hermes-engine/android/";
@@ -212,6 +213,10 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+}
+
+def safeExtGet(prop, fallback) {
+  rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
 }
 
 // Run this once to be able to run the application with BUCK
