--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.googlecastwithjwplayer">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.googlecastwithjwplayer">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,6 +11,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+        <meta-data
+                tools:replace="android:value"
+                android:name="com.google.android.gms.cast.framework.OPTIONS_PROVIDER_CLASS_NAME"
+                android:value="com.reactnative.googlecast.GoogleCastOptionsProvider" />
+
         <meta-data
                 android:name="JW_LICENSE_KEY"
                 android:value="@string/jwplayer_key" />
