--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-google-cast": "^4.1.2",
     "react-native-jw-media-player": "^0.1.57"
   },
   "devDependencies": {
